# SBERBANK-House_Price_Prediction

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: predict.py  request.py  train.py
models/: model_artifacts.joblib
notebooks/: Sberbank_house_price_prediction.ipynb
